--- a/UltimateDataBaseTool/render.yaml
+++ b/UltimateDataBaseTool/render.yaml
@@ -4,9 +4,9 @@ services:
     env: python
     plan: free
     repo: https://github.com/SokIvan/UltimateDataBaseTool
-    rootDir: .  # ← Корень репозитория
-    buildCommand: pip install -r bot/requirements.txt  # ← Указываем путь к requirements
-    startCommand: python bot/main.py  # ← Указываем путь к main.py
+    rootDir: bot  # ← Указываем что корень это папка bot
+    buildCommand: pip install -r requirements.txt  # ← Теперь ищет в bot/requirements.txt
+    startCommand: python main.py  # ← Запускает bot/main.py
     envVars:
       - key: BOT_TOKEN
         sync: false
@@ -20,9 +20,9 @@ services:
     env: python
     plan: free
     repo: https://github.com/SokIvan/UltimateDataBaseTool
-    rootDir: .  # ← Корень репозитория
-    buildCommand: pip install -r web/requirements.txt  # ← Указываем путь к requirements
-    startCommand: python web/main.py  # ← Указываем путь к main.py
+    rootDir: web  # ← Указываем что корень это папка web
+    buildCommand: pip install -r requirements.txt  # ← Теперь ищет в web/requirements.txt
+    startCommand: python main.py  # ← Запускает web/main.py
     envVars:
       - key: BOT_TOKEN
         sync: false
