--- a/UltimateDataBaseTool/requirements.txt
+++ b/UltimateDataBaseTool/requirements.txt
@@ -1,7 +1,7 @@
-fastapi==0.115.6
-uvicorn==0.34.0
-jinja2==3.1.1
-python-dotenv==1.0.0
-aiogram==3.10.0
-python-dotenv==1.0.0
-aiohttp==3.9.7
+fastapi
+uvicorn
+jinja2
+python-dotenv
+aiogram
+python-dotenv
+aiohttp
